<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>io.miragon.miranum</groupId>
    <artifactId>miranum-examples</artifactId>
    <name>miranum-examples</name>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <modules>
        <module>inquiry-integration-service</module>
        <module>single-deployment-unit-example</module>
    </modules>

    <properties>
        <revision>1.0.0</revision>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

</project>
